--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   "author": "Nicky.Wu",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
-    "babel-preset-react": "^6.16.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "babel-preset-stage-2": "^6.0.0",
+    "babel-runtime": "^6.11.6",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-register": "^6.0.0",
     "css-loader": "^0.26.1",
     "expose-loader": "^0.7.1",
     "express": "^4.14.0",
@@ -43,13 +46,10 @@
     "md5": "^2.2.1",
     "node-sass": "^4.1.1",
     "opn": "^4.0.2",
-    "react": "^15.4.2",
-    "react-addons": "^0.9.0",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
+    "vue-loader": "^9.4.0",
+    "vue-router": "^2.0.1",
+    "vue-style-loader": "^1.0.0",
+    "vuex": "^2.0.0",
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
