--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "md5": "^2.2.1",
     "node-sass": "^4.1.1",
     "opn": "^4.0.2",
+    "vue": "^2.1.0",
     "vue-loader": "^9.4.0",
     "vue-router": "^2.0.1",
     "vue-style-loader": "^1.0.0",
