--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "babel-runtime": "^6.11.6",
-    "babel-plugin-transform-runtime": "^6.0.0",
     "babel-register": "^6.0.0",
+    "babel-runtime": "^6.11.6",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "expose-loader": "^0.7.1",
     "express": "^4.14.0",
@@ -46,16 +47,15 @@
     "md5": "^2.2.1",
     "node-sass": "^4.1.1",
     "opn": "^4.0.2",
+    "resolve-url-loader": "^1.6.1",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vue": "^2.1.0",
     "vue-loader": "^9.4.0",
     "vue-router": "^2.0.1",
     "vue-style-loader": "^1.0.0",
     "vuex": "^2.0.0",
-    "resolve-url-loader": "^1.6.1",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "transfer-webpack-plugin": "^0.1.4",
-    "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.14.0",
