--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "md5": "^2.2.1",
     "node-sass": "^4.1.1",
     "opn": "^4.0.2",
+    "postcss-loader": "^2.0.5",
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
